<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:layout_gravity="center_horizontal"
    android:padding="10dp"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_settings_white_24dp"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:textStyle="bold|italic"
            android:text="User Settings"/>
    </android.support.v7.widget.Toolbar>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horiz_margin"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/changepwactivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_gravity="start"
                android:gravity="start|center"
                android:background="@null"
                android:textSize="25dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="Change your password. "/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/forgot_password2"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/deleteMyUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_gravity="start"
                android:gravity="start|center"
                android:background="@null"
                android:textSize="25dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="Delete your account "/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/delete_account"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/customerSupportButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_gravity="start"
                android:gravity="start|center"
                android:background="@null"
                android:textSize="25dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:text="Customer support "/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="@string/customer_support"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

